--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                   <h1 class="serviceTitle">
                     <strong> Coworking Space Management </strong> 코워킹 스페이스 관리 </h1>
                   <p class="serviceContent"> 세련된 공간에 걸맞는 체계적인 관리가 필요합니다. 정기 청소뿐만 아니라 각종 패브릭류 관리, 카페트 관리, 내/외부 식물 관리 등
-                    코워킹 스페이스 관리에 필요한 사항을 통합적으로 관리해드립니다. </p>
+                    코워킹 스페이스 관리에 필요한 사항을 통합적으로 관리해드립니다.. </p>
                 </div>
               </article>
             </div>
