--- a/index.html
+++ b/index.html
@@ -29,28 +29,32 @@
           type='text/css'>
   </head>
 
-  <body>
+  <body style="color: #424242 !important;">
     <div class="wrap">
       <header id="header">
-        <a href="/">
-          <h1>
-            <img src="./static/images/logo-cleanier.svg"
-                 alt="클리니어">
-          </h1>
-        </a>
+        <p>
+          <a href="/">
+            <h1 style="width: 130px;">
+              <img src="./static/images/cleanier-logo.png"
+                   alt="cleanier">
+            </h1>
+          </a>
+        </p>
+        <p>All-in-one B2B Space Solution
+        </p>
       </header>
-      <section class="landing">
+      <!-- <section class="landing">
         <div class="row">
           <div class="col-12">
             <h1 class="landingTitle">
               <strong> All in One B2B Space Solution </strong>
               <img src="./static/images/logo-cleanier-text.svg"
-                   alt="클리니어"
+                   alt="cleanier"
                    class="landingLogo" />
             </h1>
           </div>
         </div>
-      </section>
+      </section> -->
       <div class="services">
         <div class="service coworking">
           <div class="container">
@@ -61,7 +65,7 @@
                   <h1 class="serviceTitle">
                     <strong> Coworking Space Management </strong> 코워킹 스페이스 관리 </h1>
                   <p class="serviceContent"> 세련된 공간에 걸맞는 체계적인 관리가 필요합니다. 정기 청소뿐만 아니라 각종 패브릭류 관리, 카페트 관리, 내/외부 식물 관리 등
-                    코워킹 스페이스 관리에 필요한 사항을 통합적으로 관리해드립니다.. </p>
+                    코워킹 스페이스 관리에 필요한 사항을 통합적으로 관리해드립니다. </p>
                 </div>
               </article>
             </div>
@@ -198,7 +202,7 @@
                     <dd class="reviewStars">⭐️⭐️⭐️⭐️⭐️</dd>
                   </dl>
                 </cite>
-                <p class="reviewComment"> 클리니어의<br /> 커뮤니케이션 역량은<br /> 타사 대비 가히 압도적입니다 </p>
+                <p class="reviewComment"> " 클리니어의<br /> 커뮤니케이션 역량은<br /> 타사 대비 가히 압도적입니다 " </p>
               </blockquote>
             </li>
             <li class="col-11 col-md-8 col-lg-7">
@@ -211,7 +215,7 @@
                     <dd class="reviewStars">⭐️⭐️⭐️⭐️⭐️</dd>
                   </dl>
                 </cite>
-                <p class="reviewComment"> 청소는 물론 비품 관리, 수리까지<br /> 관리해줘서 업무 부담을<br /> 크게 줄일 수 있었습니다 </p>
+                <p class="reviewComment"> " 청소는 물론 비품 관리, 수리까지<br /> 관리해줘서 업무 부담을<br /> 크게 줄일 수 있었습니다 " </p>
               </blockquote>
             </li>
             <li class="col-11 col-md-8 col-lg-7">
@@ -224,7 +228,7 @@
                     <dd class="reviewStars">⭐️⭐️⭐️⭐️⭐️</dd>
                   </dl>
                 </cite>
-                <p class="reviewComment"> 따로 알아봐야 했던 카페트 세탁<br /> 에어컨 청소까지 모두 관리해주니<br /> 많은 도움이 됩니다 </p>
+                <p class="reviewComment"> " 따로 알아봐야 했던 카페트 세탁<br /> 에어컨 청소까지 모두 관리해주니<br /> 많은 도움이 됩니다 " </p>
               </blockquote>
             </li>
           </ul>
@@ -237,7 +241,7 @@
               <h1 class="contactTitle"> 문의 및 견적 요청은 아래 주소로<span class="block-to-inline"
                       aria-hidden="true"></span> 이메일 주시면 답변 드리겠습니다 </h1>
               <div class="contactCopyToClipboard">
-                <p class="contactCopyInput"> bryan@thecleanier.com </p>
+                <p class="contactCopyInput"> bryan@koreaspacedata.com </p>
                 <button type="button"
                         id="copy-email"> 복사하기 </button>
               </div>
@@ -248,11 +252,11 @@
       <footer class="footer">
         <div class="container">
           <div class="row">
-            <div class="col-12 col-md-8 col-lg-6">
-              <h1>클리니어 유한회사</h1>
-              <p>서울특별시 종로구 동순라길 78-18, 2층 | 사업자번호 : 416-87-01054</p>
+            <div class="col-12 col-md-7 col-lg-8">
+              <h1>한국공간데이터 유한회사</h1>
+              <p>서울특별시 강남구 삼성동 157-33번지 하이브로빌딩, 12층 1201호 | 사업자번호 : 416-87-01054</p>
             </div>
-            <div class="col-12 col-md-4 col-lg-5">
+            <div class="col-12 col-md-5 col-lg-4">
               <a href="http://pf.kakao.com/_Pxjrxkj/chat"
                  target="_blank"
                  aria-label="카카오톡 문의하기"
@@ -307,7 +311,7 @@
     sheet.nonce = 'string'
 
     function copyToClipboard() {
-      var email = 'bryan@thecleanier.com'
+      var email = 'bryan@koreaspacedata.com'
       var element = document.createElement('textarea');
       element.value = email;
       document.body.appendChild(element);
