--- a/index.html
+++ b/index.html
@@ -32,29 +32,14 @@
   <body style="color: #424242 !important;">
     <div class="wrap">
       <header id="header">
-        <p>
           <a href="/">
             <h1 style="width: 130px;">
               <img src="./static/images/cleanier-logo.png"
                    alt="cleanier">
             </h1>
           </a>
-        </p>
-        <p>All-in-one B2B Space Solution
-        </p>
       </header>
-      <!-- <section class="landing">
-        <div class="row">
-          <div class="col-12">
-            <h1 class="landingTitle">
-              <strong> All in One B2B Space Solution </strong>
-              <img src="./static/images/logo-cleanier-text.svg"
-                   alt="cleanier"
-                   class="landingLogo" />
-            </h1>
-          </div>
-        </div>
-      </section> -->
+
       <div class="services">
         <div class="service coworking">
           <div class="container">
@@ -253,8 +238,10 @@
         <div class="container">
           <div class="row">
             <div class="col-12 col-md-7 col-lg-8">
-              <h1>한국공간데이터 유한회사</h1>
-              <p>서울특별시 강남구 삼성동 157-33번지 하이브로빌딩, 12층 1201호 | 사업자번호 : 416-87-01054</p>
+              <div>
+                <h1>주식회사 한국공간데이터</h1>
+                <p>서울특별시 강남구 삼성동 157-33번지 하이브로빌딩 | 사업자번호 : 416-87-01054</p>
+              </div>
             </div>
             <div class="col-12 col-md-5 col-lg-4">
               <a href="http://pf.kakao.com/_Pxjrxkj/chat"
