--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
               <h1 class="featureTitle"> 청소 서비스 </h1>
               <p class="featureContent"> 공간 특성에 기반한<br />맞춤형 청소를 제공해드립니다 </p>
             </li>
+			
             <li class="col-10 col-md-6 col-lg-4 featureItem">
               <div class="featureIcon">
                 <img src="./static/images/icon-feature-2.svg"
@@ -132,6 +133,7 @@
               <h1 class="featureTitle"> 비품 관리 서비스 </h1>
               <p class="featureContent"> 상시로 비품 현황을 파악하여<br />구매 및 보충해드립니다 </p>
             </li>
+			
             <li class="col-10 col-md-6 col-lg-4 featureItem lastItem">
               <div class="featureIcon">
                 <img src="./static/images/icon-feature-3.svg"
@@ -140,6 +142,36 @@
               <h1 class="featureTitle"> 수리 지원 서비스 </h1>
               <p class="featureContent"> 전문 기사님이 방문하여 <br />다양한 수리 문제를 해결해드립니다 </p>
             </li>
+			
+			<!---->
+			<li class="col-10 col-md-6 col-lg-4 featureItem lastItem">
+              <div class="featureIcon">
+                <img src="./static/images/icon-prevention.svg"
+                     alt>
+              </div>
+              <h1 class="featureTitle"> 방역 서비스 </h1>
+              <p class="featureContent"> 방역 전문가가 방문하여 <br />방역 업무를 수행합니다 </p>
+            </li>
+			
+			<li class="col-10 col-md-6 col-lg-4 featureItem lastItem">
+              <div class="featureIcon">
+                <img src="./static/images/icon-security.svg"
+                     alt>
+              </div>
+              <h1 class="featureTitle"> 보안 서비스 </h1>
+              <p class="featureContent"> 사무실에 최적화 된 <br /> 보안 서비스를 제공합니다  </p>
+            </li>
+			
+			<li class="col-10 col-md-6 col-lg-4 featureItem lastItem">
+              <div class="featureIcon">
+                <img src="./static/images/icon-building.svg"
+                     alt>
+              </div>
+              <h1 class="featureTitle"> 사무실 중개 </h1>
+              <p class="featureContent"> 고객에게 적합한 사무실을 <br /> 소개해 드립니다  </p>
+            </li>
+			<!---->
+			
           </ul>
         </div>
       </section>
